--- a/contact.html
+++ b/contact.html
@@ -335,7 +335,7 @@ body {
             </div>
         </div>
         <div class="footer">
-            &copy;All Rights Reserved. Developed by Aashi Shah
+            &copy;All Rights Reserved. Developed by Janvi Shah
         </div>
     </body>
 </html>
