--- a/aboutus.html
+++ b/aboutus.html
@@ -1,27 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegant Bakery - About Us</title>
-    <link rel="stylesheet" href="extstyle.css">
-</head>
-<body>
-    <header>
-        <!-- Navigation Bar -->
-    </header>
-    <main>
-        <h1>About Us</h1>
-        <p>
-            <!-- Your bakery's story -->
-        </p>
-        <p>
-            <!-- Mission statement -->
-        </p>
-        <!-- Team members -->
-    </main>
-    <footer>
-        <!-- Footer content -->
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Oven Elegance - About Us</title>
+        <!-- <link rel="stylesheet" href="extstyle.css"> -->
+    </head>
+    <style>
+        /* Base styles */
+            body {
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                margin: 0;
+                padding: 0;
+                background-color: #FFF8E7;
+                color: #5C4033;
+            }
+
+            header {
+                background-color: #F9D773;
+                color: #FFF8E7;
+                padding: 20px 0;
+                text-align: center;
+            }
+
+            nav ul {
+                list-style-type: none;
+                padding: 0;
+            }
+
+            nav ul li {
+                display: inline;
+                margin: 0 15px;
+            }
+
+            nav ul li a {
+                color: #3a3a3a;
+                text-decoration: none;
+                font-weight: bold;
+            }
+
+            footer {
+                background-color: #F9D773;
+                color: #FFF8E7;
+                text-align: center;
+                padding: 10px;
+                position: relative;
+                bottom: 0;
+                width: 100%;
+            }
+
+
+
+            h1, h2 {
+                color: #D32F2F;
+            }
+
+            form {
+                background-color: #E9D5FF;
+                padding: 20px;
+                margin: 20px;
+                border-radius: 8px;
+            }
+
+            input[type="text"], input[type="email"], textarea {
+                width: 100%;
+                padding: 10px;
+                margin: 10px 0;
+                border: none;
+                border-radius: 5px;
+            }
+
+            input[type="submit"] {
+                background-color: #D32F2F;
+                color: #FFF8E7;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+
+            input[type="submit"]:hover {
+                background-color: #FFD1DC;
+                color: #5C4033;
+            }
+
+            /* Our Team */
+            .card {
+                width: 350px;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+                overflow: hidden;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                margin: 20px;
+                display: inline-block; /* Make cards inline to be in a horizontal row */
+            }
+            .card-header {
+                background-color: #f0f0f0;
+                padding: 10px;
+                text-align: center;
+            }
+            .card-content {
+                padding: 20px;
+            }  
+            .card1 {
+                width: 350px;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+                overflow: hidden;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                margin: 20px;
+                display: inline-block; /* Make cards inline to be in a horizontal row */
+            }
+            .card-header1 {
+                background-color: #f0f0f0;
+                padding: 10px;
+                text-align: center;
+            }
+            .card-content1 {
+                padding: 20px;
+            }
+            .card2 {
+                width: 350px;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+                overflow: hidden;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                margin: 20px;
+                display: inline-block; /* Make cards inline to be in a horizontal row */
+            }
+            .card-header2 {
+                background-color: #f0f0f0;
+                padding: 10px;
+                text-align: center;
+            }
+            .card-content2 {
+                padding: 20px;
+            }
+            .card3 {
+                width: 300px;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+                overflow: hidden;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                margin: 20px;
+                display: inline-block; /* Make cards inline to be in a horizontal row */
+            }
+            .card-header3 {
+                background-color: #f0f0f0;
+                padding: 10px;
+                text-align: center;
+            }
+            .card-content3 {
+                padding: 20px;
+            }
+         
+            </style>
+    <body>
+        <header>
+            <!-- Navigation Bar -->
+        </header>
+        <main>
+            <h1>About Us</h1>
+            <p>
+                Welcome to Oven Elegance, where passion meets the oven! Our
+                journey began with a simple love for baking and a commitment to
+                delivering irresistible delights to your doorstep. As a
+                family-owned bakery, we take pride in crafting each treat with
+                care, using only the finest ingredients to ensure a delightful
+                experience in every bite. Our commitment to quality is
+                unwavering. We source the best ingredients, from locally milled
+                flours to the freshest fruits and dairy, to create treats that
+                not only tantalize your taste buds but also reflect our
+                dedication to excellence. Each recipe is a labor of love, and we
+                strive to bring you a taste of tradition with a modern twist.
+            </p>
+            <p>
+                Our mission is to create moments of joy and connection through
+                the art of baking. We are dedicated to consistently delivering
+                high-quality, handcrafted treats that not only satisfy the
+                palate but also evoke a sense of nostalgia and happiness. Our
+                commitment to excellence extends from the choice of premium
+                ingredients to the meticulous attention given to each recipe.
+
+                We aspire to be more than just a bakery; we aim to be a
+                cherished part of our community, contributing positively to the
+                lives of our customers and neighbors. Our goal is to provide a
+                diverse range of options to cater to varying tastes and dietary
+                preferences, ensuring that everyone can find something
+                delightful on our shelves.
+
+                As responsible members of both the local and global communities,
+                we are committed to sustainable practices that minimize our
+                environmental impact. We actively participate in community
+                events and initiatives, fostering a sense of togetherness and
+                shared joy.
+            </p>
+            <h2>Our Team</h2>
+            <div class="card">
+                <div class="card-header">
+                    <h2>Card 1</h2>
+                </div>
+                <div class="card-content">
+                    <img src="images\chef.jpg" alt="Card Image 1"
+                        style="width: 100%; height: auto;">
+                    <p> <b> Janvi Shah - Head Baker & Founder</b>
+                        <br>
+                        Janvi is the heart and soul behind Oven Elegance.
+                        With a
+                        deep passion for baking and 3 years of experience in
+                        the
+                        culinary world,she set out to create a bakery that
+                        blends traditional
+                        flavors with innovative techniques. Janvi oversees
+                        the
+                        creative process, ensuring that every
+                        product reflects the dedication and expertise that
+                        defines Oven Elegance.</p>
+                </div>
+            </div>
+
+            <!-- Second Card -->
+            <div class="card1">
+                <div class="card-header1">
+                    <h2>Card 2</h2>
+                </div>
+                <div class="card-content1">
+                    <img src="image2.jpg" alt="Card Image 2"
+                        style="width: 100%; height: auto;">
+                    <p>Content for Card 2.</p>
+                </div>
+            </div>
+            <!-- Third Card -->
+            <div class="card3">
+                <div class="card-header3">
+                    <h2>Card 2</h2>
+                </div>
+                <div class="card-content3">
+                    <img src="image2.jpg" alt="Card Image 2"
+                        style="width: 100%; height: auto;">
+                    <p>Content for Card 2.</p>
+                </div>
+            </div>
+
+        </main>
+        <footer>
+            <!-- Footer content -->
+        </footer>
+    </body>
 </html>
