--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegant Bakery - Home</title>
+    <title>Oven Elegance - Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Elegant Bakery</h1>
+        <h1>Oven Elegance</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,7 +22,7 @@
     <main>
         <section class="hero">
             <img src="images/welcome_org.jpg" alt="Delicious bakery items" class="hero-img">
-            <h2>Welcome to Elegant Bakery</h2>
+            <h2>Welcome to Oven Elegance</h2>
             <p>Your one-stop for delicious donuts, cakes, and cookies.</p>
         </section>
         <section class="features">
@@ -44,7 +44,7 @@
         </section>
     </main>
     <footer>
-        <p>© Elegant Bakery - All rights reserved</p>
+        <p>© Oven Elegance - All rights reserved || Developed by Janvi Shah</p>
     </footer>
 </body>
 </html>
