--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oven Elegance - Home</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Oven Elegance - Home</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
         <h1>Oven Elegance</h1>
-        <nav>
+        <div class="main">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="aboutus.html">About</a></li>
                 <li><a href="menu.html">Our Menu</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
-                <li><a href="blogs.html">Blogs</a></li>
+                <li><a href="contactus.html">Contact</a></li>
+                <li><a href="#">Products</a></li>
             </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="hero">
-            <img src="images/welcome_org.jpg" alt="Delicious bakery items" class="hero-img">
-            <h2>Welcome to Oven Elegance</h2>
-            <p>Your one-stop for delicious donuts, cakes, and cookies.</p>
-        </section>
-        <section class="features">
-            <article>
-                <img src="images/donuts1.jpg" alt="Gourmet Donuts">
-                <h3>Donuts</h3>
-                <p>Indulge in our wide variety of donuts, from classic glazes to gourmet flavors.</p>
-            </article>
-            <article>
-                <img src="images/cakes.jpg" alt="Custom Cakes">
-                <h3>Cakes</h3>
-                <p>Our custom cakes are perfect for any celebration, made to order just for you.</p>
-            </article>
-            <article>
-                <img src="images/cookies1.jpg" alt="Homemade Cookies">
-                <h3>Cookies</h3>
-                <p>Enjoy our homemade cookies, baked fresh daily with love and the finest ingredients.</p>
-            </article>
-        </section>
-    </main>
-    <footer>
-        <p>© Oven Elegance - All rights reserved || Developed by Janvi Shah</p>
-    </footer>
-</body>
+        </div>
+        <main>
+            <section class="hero">
+                <img src="images/welcome_org.jpg" alt="Delicious bakery items"
+                    class="hero-img">
+                <h2>Welcome to Oven Elegance</h2>
+                <p>Your one-stop for delicious donuts, cakes, and cookies.</p>
+            </section>
+            <section class="features">
+                <article>
+                    <img src="images/donuts1.jpg" alt="Gourmet Donuts">
+                    <h3>Donuts</h3>
+                    <p>Indulge in our wide variety of donuts, from classic
+                        glazes to gourmet flavors.</p>
+                </article>
+                <article>
+                    <img src="images/cakes.jpg" alt="Custom Cakes">
+                    <h3>Cakes</h3>
+                    <p>Our custom cakes are perfect for any celebration, made to
+                        order just for you.</p>
+                </article>
+                <article>
+                    <img src="images/cookies1.jpg" alt="Homemade Cookies">
+                    <h3>Cookies</h3>
+                    <p>Enjoy our homemade cookies, baked fresh daily with love
+                        and the finest ingredients.</p>
+                </article>
+            </section>
+        </main>
+        <div class="footer">
+            <p>© Oven Elegance - All rights reserved || Developed by Janvi
+                Shah</p>
+        </div>
+    </body>
 </html>
