--- a/menu.html
+++ b/menu.html
@@ -1,33 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegant Bakery - Menu</title>
-    <link rel="stylesheet" href="extstyle.css">
-</head>
-<body>
-    <header>
-        <!-- Navigation Bar -->
-    </header>
-    <main>
-        <h1>Our Menu</h1>
-        <section class="menu-category">
-            <h2>Cakes</h2>
-            <div class="menu-items">
-                <!-- List cakes here -->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Elegant Bakery - Menu</title>
+        <link rel="stylesheet" href="menu.css">
+    </head>
+    <body>
+        <header>
+            <h1>Bakery Menu</h1>
+        </header><hr>
+
+        <section>
+            <!-- Cake Items -->
+            <div class="menu-item">
+                <img src="images\ele cake.jpg" alt="Pastry 1">
+                <h2>Kids Chocolate Cake</h2>
+                <p>Delicious flavours filled with rich chocolate.</p>
+                <p>$2.50</p>
+            </div>
+
+            <div class="menu-item">
+                <img src="images\choco cake.jpg" alt="Bread 1">
+                <h2>Rich Choco Cake</h2>
+                <p>Traditional Choco Cake with yummy vanilla ice cream and a
+                    sprinkle of edible gold dust.</p>
+                <p>$3.00</p>
+            </div>
+
+            <div class="menu-item">
+                <img src="images\pink cake.jpg" alt="Cake 1">
+                <h2>Red Velvet Cake</h2>
+                <p>Moist red velvet cake with cream cheese frosting.</p>
+                <p>$4.50</p>
             </div>
         </section>
-        <section class="menu-category">
-            <h2>Cookies</h2>
-            <div class="menu-items">
-                <!-- List cookies here -->
+        <section>
+            <!-- Donut Items -->
+            <div class="menu-item">
+                <img src="images\chocoD.jpg" alt="Pastry 1">
+                <h2>Kids Chocolate Donut</h2>
+                <p>Delicious flavours filled with rich chocolate.</p>
+                <p>$2.50</p>
+            </div>
+
+            <div class="menu-item">
+                <img src="images\donut2.jpg" alt="Bread 1">
+                <h2>Rich White Coco Donut</h2>
+                <p>Traditional Choco Cake with yummy vanilla ice cream and a
+                    sprinkle of edible gold dust.</p>
+                <p>$3.00</p>
+            </div>
+
+            <div class="menu-item">
+                <img src="images\donut1.jpg" alt="Cake 1">
+                <h2>Strawberry Donut</h2>
+                <p>Moist red velvet cake with cream cheese frosting.</p>
+                <p>$4.50</p>
             </div>
         </section>
-        <!-- Add more categories as needed -->
-    </main>
-    <footer>
-        <!-- Footer content -->
-    </footer>
-</body>
+        <section>
+            <!-- Pastry Items -->
+            <div class="menu-item">
+                <img src="images\whitepastry.jpg" alt="Pastry 1">
+                <h2>Kids White Pastry</h2>
+                <p>Delicious flavours filled with rich chocolate.</p>
+                <p>$2.50</p>
+            </div>
+
+            <div class="menu-item">
+                <img src="images\cpastry.jpg" alt="Bread 1">
+                <h2>Rich Coco Pastry</h2>
+                <p>Traditional Choco Cake with yummy vanilla ice cream and a
+                    sprinkle of edible gold dust.</p>
+                <p>$3.00</p>
+            </div>
+
+            <div class="menu-item">
+                <img src="images\fpastry.jpg" alt="Cake 1">
+                <h2>Fruit Pastry</h2>
+                <p>Moist red velvet cake with cream cheese frosting.</p>
+                <p>$4.50</p>
+            </div>
+            <div class="footer">
+                <p>© Oven Elegance - All rights reserved || Developed by Janvi
+                    Shah</p>
+            </div>
+        </section>
+    </body>
 </html>
