--- a/demo.html
+++ b/demo.html
@@ -1,67 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        /* Add some basic styling for the card */
-        .card {
-            width: 300px;
-            border: 1px solid #ccc;
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contact Us</title>
+        <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        .contact-form {
+            background-color: #fff;
             border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 20px;
-            display: inline-block; /* Make cards inline to be in a horizontal row */
-        }
-
-        /* Style the card header */
-        .card-header {
-            background-color: #f0f0f0;
-            padding: 10px;
-            text-align: center;
-        }
-
-        /* Style the card content */
-        .card-content {
             padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 400px;
         }
 
-        /* Style the text outside the card */
-        .text-outside-card {
-            margin-top: 20px;
-            text-align: center;
+        .contact-form label {
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        .contact-form input,
+        .contact-form textarea {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 16px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .contact-form button {
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
         }
     </style>
-</head>
-<body>
+    </head>
 
-    <!-- First Card -->
-    <div class="card">
-        <div class="card-header">
-            <h2>Card 1</h2>
-        </div>
-        <div class="card-content">
-            <img src="image1.jpg" alt="Card Image 1" style="width: 100%; height: auto;">
-            <p>Content for Card 1.</p>
-        </div>
-    </div>
+    <body>
 
-    <!-- Second Card -->
-    <div class="card">
-        <div class="card-header">
-            <h2>Card 2</h2>
-        </div>
-        <div class="card-content">
-            <img src="image2.jpg" alt="Card Image 2" style="width: 100%; height: auto;">
-            <p>Content for Card 2.</p>
-        </div>
-    </div>
+        <div class="contact-form">
+            <h2>Contact Us</h2>
+            <form action="#" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
 
-    <!-- Text outside the cards -->
-    <div class="text-outside-card">
-        <p>This text is outside the cards.</p>
-    </div>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
 
-</body>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4"
+                    required></textarea>
+
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+
+    </body>
+
 </html>
