--- a/contactus.html
+++ b/contactus.html
@@ -4,60 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Elegant Bakery - Contact Us</title>
-        <!-- <link rel="stylesheet" href="extstyle.css"> -->
+        <link rel="stylesheet" href="contactus.css">
     </head>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #FFF8E7;     
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        .contact-form {
-            background-color: #fff;
-            border-radius: 8px;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 400px;
-        }
-
-        .contact-form label {
-            display: block;
-            margin-bottom: 8px;
-        }
-
-        .contact-form input, .contact-form textarea {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 16px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        .contact-form button {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-    </style>
     <body>
+        <img src="images/welcome_org.jpg">
         <header>
             <!-- Navigation Bar -->
         </header>
         <div class="contact-form">
             <h2>Contact Us</h2>
+            <hr>
             <form action="#" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
@@ -68,12 +24,8 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="4"
                     required></textarea>
-
                 <button type="submit">Submit</button>
             </form>
         </div>
-        <footer>
-            <!-- Footer content -->
-        </footer>
     </body>
 </html>
