--- a/contactus.html
+++ b/contactus.html
@@ -7,10 +7,9 @@
         <link rel="stylesheet" href="contactus.css">
     </head>
     <body>
+        <h1>Oven <br> Elegance</h1> 
+        &nbsp; &nbsp; &nbsp;
         <img src="images/welcome_org.jpg">
-        <header>
-            <!-- Navigation Bar -->
-        </header>
         <div class="contact-form">
             <h2>Contact Us</h2>
             <hr>
