--- a/menu.html
+++ b/menu.html
@@ -7,10 +7,16 @@
         <link rel="stylesheet" href="menu.css">
     </head>
     <body>
-        <header>
-            <h1>Bakery Menu</h1>
-        </header><hr>
-
+        <h1>Oven Elegance</h1>
+        <div class="main">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About</a></li>
+                <li><a href="menu.html">Our Menu</a></li>
+                <li><a href="contactus.html">Contact</a></li>
+            </ul>
+        </div>
+        <br><br>
         <section>
             <!-- Cake Items -->
             <div class="menu-item">
