--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,18 @@
         <link rel="stylesheet" href="aboutus.css">
     </head>
     <body>
-        <h1>About Us</h1>
+        
+        <h1>Oven Elegance</h1>
+        <div class="main">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About</a></li>
+                <li><a href="menu.html">Our Menu</a></li>
+                <li><a href="contactus.html">Contact</a></li>
+            </ul>
+        </div>
+        <br><br>
+        <h2>About Us</h1>
         <p>
             Welcome to Oven Elegance, where passion meets the oven! Our
             journey began with a simple love for baking and a commitment to
@@ -46,7 +57,7 @@
         <main>
             <div class="card">
                 <div class="card-header">
-                    <h2>Janvi Shah - Founder</h2>
+                    <h3>Janvi Shah - Founder</h3>
                 </div>
                 <div class="card-content">
                     <img src="images\chef.jpg" alt="Card Image 1"
@@ -66,7 +77,7 @@
             </div>
             <div class="card2">
                 <div class="card-header2">
-                    <h2>Janvi Shah - Founder</h2>
+                    <h3>Janvi Shah - Founder</h3>
                 </div>
                 <div class="card-content2">
                     <img src="images\chef.jpg" alt="Card Image 1"
@@ -86,7 +97,7 @@
             </div>
             <div class="card3">
                 <div class="card-header3">
-                    <h2>Janvi Shah - Founder</h2>
+                    <h3>Janvi Shah - Founder</h3>
                 </div>
                 <div class="card-content3">
                     <img src="images\chef.jpg" alt="Card Image 1"
